<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/nike_air_jordan"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/purple_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dummy_description_about_the_product_to_test_ellip_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/purple_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />


        <TextView
            android:id="@+id/tv_product_price_after_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egp_1_200"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/purple_black"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egp_1_200"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/dark_cerulean"
            app:layout_constraintStart_toStartOf="@id/iv_star"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description" />


        <TextView
            android:id="@+id/product_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_4_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/purple_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price_after_discount" />

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            android:src="@drawable/ic_star"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/product_review" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_to_favorites"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintEnd_toEndOf="@id/iv_product"
            app:layout_constraintTop_toTopOf="@id/iv_product" />

        <ImageButton
            android:id="@+id/add_to_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_to_cart"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
