<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_route_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/route_logo"
        android:src="@drawable/ic_route_logo"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center"
        android:paddingTop="16dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_route_logo">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="@string/search_hint"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search_hint"
            android:background="@drawable/search_background"
            android:inputType="text"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_route_logo"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cart"
            android:src="@drawable/ic_cart"
            app:layout_constraintStart_toEndOf="@id/search_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_route_logo"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>