<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:id="@+id/iv_route_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/route_logo"
        android:src="@drawable/ic_route_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="start|center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_route_logo"
        >

        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/search_hint"
            android:background="@drawable/search_background"
            android:drawableStart="@drawable/ic_search"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:drawablePadding="8dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_route_logo" />

        <ImageView
            android:id="@+id/iv_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cart"
            android:src="@drawable/ic_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_field"
            app:layout_constraintTop_toBottomOf="@id/iv_route_logo"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_app_bar"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_product" />


</androidx.constraintlayout.widget.ConstraintLayout>